card.css
/* card */
.card {
  background-color: hsl(228, 56%, 26%);
  padding: 48px;
  border-radius: 10px;
  color: hsl(243, 100%, 93%);
  font-size: 14px;
  box-shadow: 0px 35px 25px 6px rgba(0, 0, 0, 0.09);

  position: relative;
  top: 5px;
}

.card--big-border-radius {
  width: 350px;
  border-top-right-radius: 100px;
  padding: 40px 41px;
}

.card--long-width {
  width: 540px;
  padding: 40px 39px 62px;
}

/* card__image */
.card__image {
  margin-bottom: 30px;
}

/* card__text */
.card__text {
  margin-bottom: 16px;
}

